Rehauled the Variable package to be much more accurate to HSP, left some notes of things unfinished. Fixed a lot of bugs with initializing/expanding variables. There's some potential bugs introduced if a variable is created with ProgramCommand.dup (not Operand.dup), this is noted and relatively easy to fix in Reference.java. In Elona, should prevent bugged quests from spawning, and kicking trees for spellbooks.